--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
+        <!-- Links to CV, X account, and email -->
+        <div class="contact-links">
+            <a href="https://your-github-username.github.io/samwang_website_compbio/Xi_Sam_Wang_CV_20240821.pdf" target="_blank">Download CV</a> | 
+            <a href="https://x.com/xiw020" target="_blank">X Profile</a> | 
+            <a href="mailto:xiwang@hms.harvard.edu">Email Me</a>
+        </div>
     </header>
 
     <section id="home">
